# static-libraries-combiner

./: .gitignore  LICENSE  README.md  combiner.cmake
cmake/: combiner.cmake
example/: CMakeLists.txt  main.cpp
example/libA/: CMakeLists.txt  libA.cpp  libA.hpp
example/libA/libB/: CMakeLists.txt  libB.cpp  libB.hpp
example/libA/libC/: CMakeLists.txt  libC.cpp  libC.hpp
example/libA/libC/libD/: CMakeLists.txt  libD.cpp  libD.hpp
